--- a/agent_state_machine/Cargo.toml
+++ b/agent_state_machine/Cargo.toml
@@ -15,6 +15,12 @@ serde_json = "1.0"
 thiserror = "1.0"
 tracing = "0.1"
 futures = "0.3"
+serde-xml-rs = "0.6"
+quick-xml = { version = "0.36.2", features = ["serialize"] }
+# New dependencies for research assistant
+reqwest = { version = "0.11", features = ["json"] }
+urlencoding = "2.1"
+scraper = "0.20.0"
 
 [dev-dependencies]
 tokio-test = "0.4"
